--- a/atoms/Button/Button.css
+++ b/atoms/Button/Button.css
@@ -1,11 +1,10 @@
-
 .button {
   border: 1px solid transparent;
   padding: 10px 85px;
   border-radius: 30px;
   box-shadow: 0px 4px 5px var(--white-lilac);
   cursor: pointer;
-  transition: ease 0.3s
+  transition: all 0.5s ease;
 }
 
 .type-primary {
