--- a/tokens.css
+++ b/tokens.css
@@ -6,6 +6,7 @@
   --colors-transparent: transparent;
   --colors-black: #000;
   --colors-white: #fff;
+
   --colors-gray-100: #f7fafc;
   --colors-gray-200: #edf2f7;
   --colors-gray-300: #e2e8f0;
@@ -96,4 +97,122 @@
   --colors-pink-700: #b83280;
   --colors-pink-800: #97266d;
   --colors-pink-900: #702459;
+  --spacing-0: 0;
+  --spacing-1: 0.25rem;
+  --spacing-2: 0.5rem;
+  --spacing-3: 0.75rem;
+  --spacing-4: 1rem;
+  --spacing-5: 1.25rem;
+  --spacing-6: 1.5rem;
+  --spacing-8: 2rem;
+  --spacing-10: 2.5rem;
+  --spacing-12: 3rem;
+  --spacing-16: 4rem;
+  --spacing-20: 5rem;
+  --spacing-24: 6rem;
+  --spacing-32: 8rem;
+  --spacing-40: 10rem;
+  --spacing-48: 12rem;
+  --spacing-56: 14rem;
+  --spacing-64: 16rem;
+  --spacing-px: 1px;
+  --screens-xs: 420px;
+  --screens-sm: 640px;
+  --screens-md: 768px;
+  --screens-lg: 1024px;
+  --screens-xl: 1280px;
+
+  --screens-max-xs: 419px;
+  --screens-max-sm: 639px;
+  --screens-max-md: 767px;
+  --screens-max-lg: 1023px;
+  --screens-max-xl: 1279px;
+  --font-family-serif-0: Roboto Slab;
+  --font-family-serif-1: "Times New Roman";
+  --font-family-serif-2: serif;
+  --font-family-sans-0: Apercu;
+  --font-family-sans-1: Arial;
+  --font-family-sans-2: sans-serif;
+  --font-family-mono-0: "Roboto Mono";
+  --font-family-mono-1: Consolas;
+  --font-family-mono-2: monospace;
+  --font-size-base-mobile: 16px;
+  --font-size-base-desktop: 18px;
+  --font-size-xs: 0.75rem;
+  --font-size-sm: 0.875rem;
+  --font-size-md: 1rem;
+  --font-size-lg: 1.125rem;
+  --font-size-xl: 1.25rem;
+  --font-size-2xl: 1.5rem;
+  --font-size-3xl: 1.875rem;
+  --font-size-4xl: 2.25rem;
+  --font-size-5xl: 3rem;
+  --font-size-6xl: 4rem;
+  --font-weight-hairline: 100;
+  --font-weight-thin: 200;
+  --font-weight-light: 300;
+  --font-weight-normal: 400;
+  --font-weight-medium: 500;
+  --font-weight-semibold: 600;
+  --font-weight-bold: 700;
+  --font-weight-extrabold: 800;
+  --font-weight-black: 900;
+  --line-height-none: 1;
+  --line-height-tight: 1.25;
+  --line-height-snug: 1.375;
+  --line-height-normal: 1.5;
+  --line-height-relaxed: 1.625;
+  --line-height-loose: 2;
+  --letter-spacing-tighter: -0.05em;
+  --letter-spacing-tight: -0.025em;
+  --letter-spacing-normal: 0;
+  --letter-spacing-wide: 0.025em;
+  --letter-spacing-wider: 0.05em;
+  --letter-spacing-widest: 0.1em;
+  --shadows-outline: 0 0 0 3px rgba(66, 153, 225, 0.5);
+  --shadows-none: none;
+
+  --shadows-down-sm: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+    0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  --shadows-down-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  --shadows-down-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  --shadows-down-xl: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
+  --shadows-down-2xl: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+  --shadows-down-inner: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
+  --shadows-up-sm: 0 -1px 3px 0 rgba(0, 0, 0, 0.1),
+    0 -1px 2px 0 rgba(0, 0, 0, 0.06);
+  --shadows-up-md: 0 -4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 -2px 4px -1px rgba(0, 0, 0, 0.06);
+  --shadows-up-lg: 0 -10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 -4px 6px -2px rgba(0, 0, 0, 0.05);
+  --shadows-up-xl: 0 -20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 -10px 10px -5px rgba(0, 0, 0, 0.04);
+  --shadows-up-2xl: 0 -25px 50px -12px rgba(0, 0, 0, 0.25);
+  --shadows-up-inner: inset 0 -2px 4px 0 rgba(0, 0, 0, 0.06);
+  --min-height-0: 0;
+  --min-height-full: 100%;
+  --min-height-screen: 100vh;
+  --min-width-0: 0;
+  --min-width-full: 100%;
+  --opacity-0: 0;
+  --opacity-25: 0.25;
+  --opacity-50: 0.5;
+  --opacity-75: 0.75;
+  --opacity-100: 1;
+  --border-radius-none: 0;
+  --border-radius-sm: 0.125rem;
+  --border-radius-md: 0.25rem;
+  --border-radius-lg: 0.5rem;
+  --border-radius-full: 9999px;
+  --z-index-0: 0;
+  --z-index-10: 10;
+  --z-index-20: 20;
+  --z-index-30: 30;
+  --z-index-40: 40;
+  --z-index-50: 50;
+  --z-index-auto: auto;
+  --colors-primary: #9879e9;
 }
