--- a/atoms/Button/Button.css
+++ b/atoms/Button/Button.css
@@ -1,10 +1,11 @@
 .button {
-  border: 1px solid transparent;
+  border: 1px solid var(--colors-transparent);
   padding: 10px 85px;
   border-radius: 30px;
   box-shadow: 0px 4px 5px var(--colors-brand-white-lilac);
   cursor: pointer;
   transition: all 0.5s ease;
+  font-size: var(--font-size-2xl);
 }
 
 .type-primary {
@@ -21,7 +22,17 @@
 }
 
 .type-secondary {
-  background: transparent;
+  background: var(--colors-transparent);
   color: var(--colors-brand-medium-purple);
   border: 1px solid var(--colors-brand-medium-purple);
+}
+
+.type-tertiary {
+  /* --colors-transparent: blue; */
+  background: var(--colors-transparent);
+  color: var(--colors-primary);
+  box-shadow: var(--shadows-none);
+  padding: none;
+  border-bottom: 1px solid var(--colors-primary);
+  border-radius: var(--border-radius-none)
 }
