--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -1,8 +1,13 @@
 :root {
   --colors-brand-medium-purple: #9879e9;
-  --colors-brand-white: #fff;
+  --colors-brand-mandy: #eb4e58;
   --colors-brand-white-lilac: #e8e8e8;
+  --colors-brand-hint-of-red: #f9f9f9;
+  --colors-brand-romance: #fcfdfd;
   --colors-brand-east-bay: #455970;
+  --colors-brand-regent-gray: #7e858c;
+  --colors-brand-loblolly: #b7b7b7;
+  --colors-brand-blue-moon: #eff1fd;
   --colors-transparent: transparent;
   --colors-black: #000;
   --colors-white: #fff;
@@ -204,7 +209,7 @@
   --border-radius-none: 0;
   --border-radius-sm: 0.125rem;
   --border-radius-md: 0.25rem;
-  --border-radius-lg: 0.5rem;
+  --border-radius-lg: 30px;
   --border-radius-full: 9999px;
   --z-index-0: 0;
   --z-index-10: 10;
@@ -214,4 +219,11 @@
   --z-index-50: 50;
   --z-index-auto: auto;
   --colors-primary: #9879e9;
+  --colors-primary-highlight: #eff1fd;
+  --colors-secondary: #eb4e58;
+  --colors-font-base: #455970;
+  --colors-font-muted: #7e858c;
+  --colors-font-highlight: #b7b7b7;
+  --backgrounds-primary: #f9f9f9;
+  --backgrounds-highlight: #fcfdfd;
 }
