--- a/atoms/Heading/Heading.css
+++ b/atoms/Heading/Heading.css
@@ -3,11 +3,11 @@
 }
 
 .color-primary {
-  color: var(--colors-brand-medium-purple);
+  color: var(--colors-primary);
 }
 
 .color-default {
-  color: var(--colors-brand-east-bay);
+  color: var(--colors-font-base);
 }
 
 .size-md {
