--- a/atoms/Button/Button.css
+++ b/atoms/Button/Button.css
@@ -1,7 +1,7 @@
 .button {
   border: 1px solid var(--colors-transparent);
   padding: 10px 20px;
-  border-radius: 30px;
+  border-radius: var(--border-radius-lg);
   box-shadow: 0px 4px 5px var(--colors-brand-white-lilac);
   cursor: pointer;
   transition: all 0.5s ease;
@@ -44,5 +44,5 @@
   box-shadow: var(--shadows-none);
   padding: none;
   border-bottom: 1px solid var(--colors-primary);
-  border-radius: var(--border-radius-none)
+  border-radius: var(--border-radius-none);
 }
