--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -132,9 +132,7 @@
   --screens-max-md: 767px;
   --screens-max-lg: 1023px;
   --screens-max-xl: 1279px;
-  --font-family-sans-0: Quicksand;
-  --font-family-sans-1: Arial;
-  --font-family-sans-2: sans-serif;
+  --font-family-sans: Quicksand, Arial, sans-serif;
   --font-size-base: 10px;
   --font-size-xs: 0.75rem;
   --font-size-sm: 0.875rem;
@@ -212,9 +210,6 @@
   --z-index-40: 40;
   --z-index-50: 50;
   --z-index-auto: auto;
-
-  /* Decissions */
-
   --colors-primary: #9879e9;
   --colors-primary-highlight: #eff1fd;
   --colors-secondary: #eb4e58;
