--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -103,24 +103,11 @@
   --colors-pink-800: #97266d;
   --colors-pink-900: #702459;
   --spacing-0: 0;
-  --spacing-1: 0.25rem;
-  --spacing-2: 0.5rem;
-  --spacing-3: 0.75rem;
-  --spacing-4: 1rem;
-  --spacing-5: 1.25rem;
-  --spacing-6: 1.5rem;
-  --spacing-8: 2rem;
-  --spacing-10: 2.5rem;
-  --spacing-12: 3rem;
-  --spacing-16: 4rem;
-  --spacing-20: 5rem;
-  --spacing-24: 6rem;
-  --spacing-32: 8rem;
-  --spacing-40: 10rem;
-  --spacing-48: 12rem;
-  --spacing-56: 14rem;
-  --spacing-64: 16rem;
-  --spacing-px: 1px;
+  --spacing-px: 1;
+  --spacing-xs: 5;
+  --spacing-sm: 15;
+  --spacing-md: 20;
+  --spacing-lg: 40;
   --screens-xs: 420px;
   --screens-sm: 640px;
   --screens-md: 768px;
@@ -210,6 +197,8 @@
   --z-index-40: 40;
   --z-index-50: 50;
   --z-index-auto: auto;
+
+
   --colors-primary: #9879e9;
   --colors-primary-highlight: #eff1fd;
   --colors-secondary: #eb4e58;
