--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,10 @@
 html,
 body {
-  font-size: var(--font-size-base)
+  font-size: var(--font-size-base);
+  font-family: var(--font-family-sans);
 }
 
-html {
+/* html {
   box-sizing: border-box;
 }
 
@@ -12,3 +13,4 @@ html {
 *:after {
   box-sizing: inherit;
 }
+ */
