--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -174,6 +174,7 @@
   --color-font-highlight: #b7b7b7;
   --background-color-primary: #f9f9f9;
   --background-color-highlight: #fcfdfd;
+  --container-max-width: 800px;
   --button-max-width: 300px;
   --input-height: 38px;
 }
