--- a/styles/main.css
+++ b/styles/main.css
@@ -2,15 +2,9 @@ html,
 body {
   font-size: var(--font-size-base);
   font-family: var(--font-family-sans);
+  height: 100%
 }
 
-/* html {
-  box-sizing: border-box;
+#__next {
+  height: 100%;
 }
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
- */
