feat: add monospaced font to use in tokens component

--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -176,6 +176,7 @@
       ;
 	
 	--font-family-sans: Quicksand, Arial, sans-serif;
+	--font-family-mono: Roboto Mono, monospace;
       ;
 	
     --font-size-base: 10px;
