--- a/tokens/Token/Token.module.css
+++ b/tokens/Token/Token.module.css
@@ -15,12 +15,11 @@
 
 .label {
   font-size: var(--font-size-md);
+  font-family: var(--font-family-mono);
   border: 1px solid var(--color-gray-200);
   background-color: 1px solid var(--color-gray-400);
   border-radius: var(--border-radius-sm);
-  margin: 2px 0;
-  padding: 3px 5px;
-  position: relative;
+  padding: 4px 8px;
   color: var(--color-gray-700);
 }
 
@@ -29,4 +28,5 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  gap: 4px;
 }
