replace new tokens

--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -176,7 +176,7 @@
       ;
 	
 	--font-family-sans: Quicksand, Arial, sans-serif;
-	--font-family-mono: Roboto Mono, monospace;
+	--font-family-mono: Roboto Mono, Courier New, monospace;
       ;
 	
     --font-size-base: 10px;
