--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,7 @@ html,
 body {
   font-size: var(--font-size-base);
   font-family: var(--font-family-sans);
-  height: 100%
+  height: 100%;
 }
 
 #__next {
