--- a/molecules/AddButton/AddButton.module.css
+++ b/molecules/AddButton/AddButton.module.css
@@ -1,7 +1,6 @@
 .add-button {
   display: flex;
   border: 1px dashed;
-  padding: 10px 12px;
   align-items: center;
   cursor: pointer;
   user-select: none;
@@ -10,9 +9,32 @@
 .type-primary {
   border-color: var(--color-font-base);
   border-radius: var(--border-radius-sm);
+  height: 45px;
+  padding: 10px 12px;
 }
 
 .type-secondary {
-  border-color: var(--color-font-primary);
+  border-color: var(--color-primary);
   border-radius: var(--border-radius-md);
+  height: 38px;
+  padding: 8px 12px;
+}
+
+.is-editable {
+  border: 1px solid;
+  background: var(--color-white);
+  border-color: var(--color-gray-300);
+  box-shadow: var(--box-shadow-sm);
+}
+
+.is-editable > input {
+  border: 1px solid transparent;
+  color: var(--color-font-base);
+  width: 100%;
+  padding: 12px 17px;
+  line-height: var(--line-height-tight);
+  font-weight: var(--font-weight-medium);
+  font-family: var(--font-family-sans);
+  font-size: var(--font-size-md);
+  height: var(--input-height);
 }
