--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -1,6 +1,5 @@
 :root {
-
-    --color-brand-slate-blue: #7559d1;
+  --color-brand-slate-blue: #7559d1;
   --color-brand-medium-purple: #9879e9;
   --color-brand-blue-moon: #eff1fd;
   --color-brand-mandy: #eb4e58;
@@ -10,12 +9,10 @@
   --color-brand-white-lilac: #e8e8e8;
   --color-brand-hint-of-red: #f9f9f9;
   --color-brand-romance: #fcfdfd;
-      ;
 
   --color-base-black: #000;
   --color-base-white: #fff;
   --color-base-transparent: transparent;
-      ;
 
   --color-gray-100: #f7fafc;
   --color-gray-200: #edf2f7;
@@ -26,7 +23,6 @@
   --color-gray-700: #4a5568;
   --color-gray-800: #2d3748;
   --color-gray-900: #1a202c;
-      ;
 
   --color-red-100: #fff5f5;
   --color-red-200: #fed7d7;
@@ -37,7 +33,6 @@
   --color-red-700: #c53030;
   --color-red-800: #9b2c2c;
   --color-red-900: #742a2a;
-      ;
 
   --color-orange-100: #fffaf0;
   --color-orange-200: #feebc8;
@@ -48,7 +43,6 @@
   --color-orange-700: #c05621;
   --color-orange-800: #9c4221;
   --color-orange-900: #7b341e;
-      ;
 
   --color-yellow-100: #fffff0;
   --color-yellow-200: #fefcbf;
@@ -59,7 +53,6 @@
   --color-yellow-700: #b7791f;
   --color-yellow-800: #975a16;
   --color-yellow-900: #744210;
-      ;
 
   --color-green-100: #f0fff4;
   --color-green-200: #c6f6d5;
@@ -70,7 +63,6 @@
   --color-green-700: #2f855a;
   --color-green-800: #276749;
   --color-green-900: #22543d;
-      ;
 
   --color-teal-100: #e6fffa;
   --color-teal-200: #b2f5ea;
@@ -81,7 +73,6 @@
   --color-teal-700: #2c7a7b;
   --color-teal-800: #285e61;
   --color-teal-900: #234e52;
-      ;
 
   --color-blue-100: #ebf8ff;
   --color-blue-200: #bee3f8;
@@ -92,7 +83,6 @@
   --color-blue-700: #2b6cb0;
   --color-blue-800: #2c5282;
   --color-blue-900: #2a4365;
-      ;
 
   --color-indigo-100: #ebf4ff;
   --color-indigo-200: #c3dafe;
@@ -103,7 +93,6 @@
   --color-indigo-700: #4c51bf;
   --color-indigo-800: #434190;
   --color-indigo-900: #3c366b;
-      ;
 
   --color-purple-100: #faf5ff;
   --color-purple-200: #e9d8fd;
@@ -114,7 +103,6 @@
   --color-purple-700: #6b46c1;
   --color-purple-800: #553c9a;
   --color-purple-900: #44337a;
-      ;
 
   --color-pink-100: #fff5f7;
   --color-pink-200: #fed7e2;
@@ -125,35 +113,25 @@
   --color-pink-700: #b83280;
   --color-pink-800: #97266d;
   --color-pink-900: #702459;
-      ;
-      ;
 
   --spacing-none: 0;
   --spacing-xs: 5;
   --spacing-sm: 15;
   --spacing-md: 20;
   --spacing-lg: 40;
-      ;
-
-        
-        
 
   --media-query-min-width-sm: 576px;
   --media-query-min-width-md: 768px;
   --media-query-min-width-lg: 992px;
   --media-query-min-width-xl: 1200px;
-      ;
 
   --media-query-max-width-xs: 575.98px;
   --media-query-max-width-sm: 767.98px;
   --media-query-max-width-md: 991.98px;
   --media-query-max-width-lg: 1199px;
-      ;
-      ;
 
   --font-family-sans: Quicksand, Arial, sans-serif;
-  --font-family-mono: 'Roboto Mono', 'Courier New', monospace;
-      ;
+  --font-family-mono: "Roboto Mono", "Courier New", monospace;
 
   --font-size-base: 10px;
   --font-size-xs: 1.1rem;
@@ -162,7 +140,6 @@
   --font-size-lg: 1.8rem;
   --font-size-xl: 2.1rem;
   --font-size-2xl: 6rem;
-      ;
 
   --font-weight-hairline: 100;
   --font-weight-thin: 200;
@@ -173,7 +150,6 @@
   --font-weight-bold: 700;
   --font-weight-extrabold: 800;
   --font-weight-black: 900;
-      ;
 
   --line-height-none: 1;
   --line-height-tight: 1.25;
@@ -181,7 +157,6 @@
   --line-height-normal: 1.5;
   --line-height-relaxed: 1.625;
   --line-height-loose: 2;
-      ;
 
   --letter-spacing-tighter: -0.05em;
   --letter-spacing-tight: -0.025em;
@@ -189,30 +164,25 @@
   --letter-spacing-wide: 0.025em;
   --letter-spacing-wider: 0.05em;
   --letter-spacing-widest: 0.1em;
-      ;
 
   --box-shadow-none: none;
   --box-shadow-sm: 0px 4px 5px rgba(0, 0, 0, 0.07);
-      ;
 
   --border-radius-none: 0;
   --border-radius-sm: 10px;
   --border-radius-md: 20px;
   --border-radius-lg: 30px;
   --border-radius-full: 9999px;
-      ;
 
   --border-width-none: 0;
   --border-width-thin: 1px;
   --border-width-thick: 2px;
-      ;
 
   --opacity-0: 0;
   --opacity-25: 0.25;
   --opacity-50: 0.5;
   --opacity-75: 0.75;
   --opacity-100: 1;
-      ;
 
   --z-index-0: 0;
   --z-index-10: 10;
@@ -221,13 +191,6 @@
   --z-index-40: 40;
   --z-index-50: 50;
   --z-index-auto: auto;
-      ;
-        
-        
-        
-        
-        
-        
 
   --color-primary: #9879e9;
   --color-primary-muted: #7559d1;
@@ -239,23 +202,17 @@
   --color-font-inverted: #fff;
   --color-secondary: #eb4e58;
   --color-secondary-inverted: #fff;
-      ;
 
   --background-color-primary: #f9f9f9;
   --background-color-primary-highlight: #fcfdfd;
-      ;
 
   --container-max-width: 800px;
-      ;
 
   --button-max-width: 300px;
-      ;
 
   --input-height: 38px;
   --input-max-width: 400px;
   --input-background: #fff;
-      ;
 
   --picture-border: 1px solid #cbd5e0;
-      ;
 }
