--- a/atoms/Card/Card.module.css
+++ b/atoms/Card/Card.module.css
@@ -34,3 +34,7 @@
   border: var(--border-width-thin) solid var(--color-gray-300);
   background: var(--color-primary-inverted);
 }
+
+.is-clickable {
+  cursor: pointer;
+}
