enhancement: modify component template, modify hoc and style helpers, modify tokens, add check atom and refactor of the icon component

--- a/atoms/Check/Check.module.css
+++ b/atoms/Check/Check.module.css
@@ -1,3 +1,11 @@
 .check {
-  display: flex;
+  display: inline-flex;
+  width: 100%;
+  max-width: 17px;
+  height: 17px;
+  box-sizing: content-box;
+  border: var(--picture-border);
+  margin: 8px;
+  border-radius: var(--border-radius-full);
+  cursor: pointer;
 }
