--- a/atoms/Icon/Icon.module.css
+++ b/atoms/Icon/Icon.module.css
@@ -1,64 +1,24 @@
-.icon {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  user-select: none;
+.input {
+  width: 100%;
+  height: var(--input-height);
+  padding: 12px 17px;
+  border: var(--border-width-thin) solid var(--color-primary);
+  background: var(--input-background);
+  border-radius: var(--input-border-radius);
+  color: var(--color-font-base);
+  font-family: var(--font-family-sans);
+  font-size: var(--input-font-size);
+  font-weight: var(--font-weight-medium);
+  line-height: var(--line-height-tight);
+  transition: box-shadow 0.2s ease;
 }
-.size-sm {
-  padding: 5px;
+.input::placeholder {
+  color: var(--color-font-highlight);
 }
-.size-md {
-  padding: 8px;
+.input:focus {
+  box-shadow: 0 0 0 1px var(--color-primary), 0 0 10px 0 var(--color-primary);
+  outline: none;
 }
-.size-lg {
-  padding: 12px;
-}
-.size-xl {
-  padding: 15px;
-}
-.color-base path {
-  fill: var(--color-font-base);
-}
-.color-highlight path {
-  fill: var(--color-font-highlight);
-}
-.color-muted path {
-  fill: var(--color-font-muted);
-}
-.color-primary path {
-  fill: var(--color-primary);
-}
-.color-inverted path {
-  fill: var(--color-primary-inverted);
-}
-.background-base {
-  background: var(--color-gray-100);
-  border-radius: var(--border-radius-full);
-}
-.background-transparent {
-  background: var(--color-base-transparent);
-}
-.background-highlight {
-  background: var(--color-primary-highlight);
-  border-radius: var(--border-radius-full);
-}
-.background-muted {
-  background: var(--color-primary-muted);
-  border-radius: var(--border-radius-full);
-}
-.background-inverted {
-  border: var(--picture-border);
-  background: var(--color-primary-inverted);
-  border-radius: var(--border-radius-full);
-  box-shadow: var(--box-shadow-sm);
-}
-
-.background-spotlight {
-  background: var(--color-yellow-100);
-  border-radius: var(--border-radius-full);
-  box-shadow: var(--box-shadow-sm);
-}
-
-.is-clickeable {
-  cursor: pointer;
+.is-inline {
+  max-width: max-content;
 }
