--- a/molecules/AddButton/AddButton.module.css
+++ b/molecules/AddButton/AddButton.module.css
@@ -11,12 +11,12 @@
 .type-primary {
   height: 48px;
   border-color: var(--color-font-base);
-  border-radius: var(--border-radius-sm);
+  border-radius: var(--button-border-radius-sm);
 }
 .type-secondary {
   height: 40px;
   border-color: var(--color-primary);
-  border-radius: var(--border-radius-md);
+  border-radius: var(--buttom-border-radius-md);
 }
 .is-editable {
   padding: 0;
@@ -41,7 +41,7 @@
   background: var(--color-transparent);
   color: var(--color-font-inverted);
   font-family: var(--font-family-sans);
-  font-size: var(--font-size-md);
+  font-size: var(--input-font-size);
   font-weight: var(--font-weight-medium);
   line-height: var(--line-height-none);
   text-overflow: ellipsis;
