--- a/atoms/Card/Card.module.css
+++ b/atoms/Card/Card.module.css
@@ -5,7 +5,7 @@
   padding: 12px 10px;
   border: var(--border-width-thin) solid var(--color-base-transparent);
   /* max-width: 320px; */
-  border-radius: var(--border-radius-sm);
+  border-radius: var(--card-border-radius);
   box-shadow: var(--box-shadow-sm);
   color: var(--color-font-base);
   transition: box-shadow 0.2s ease-in;
