--- a/styles/tokens.css
+++ b/styles/tokens.css
@@ -213,9 +213,13 @@
 
   --button-max-width: 300px;
 
-  --button-border-radius-base: 30px;
   --button-border-radius-sm: 10px;
   --button-border-radius-md: 20px;
+  --button-border-radius-lg: 30px;
+
+  --card-border-radius: 10px;
+
+  --task-border-radius: 10px;
 
   --input-height: 38px;
   --input-max-width: 400px;
